<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/action_overwrite"
		android:icon="@android:drawable/ic_input_get"
		android:showAsAction="always"
		android:title="@string/action_overwrite"/>
	<item
		android:id="@+id/action_add"
		android:icon="@android:drawable/ic_menu_add"
		android:showAsAction="always|withText"
		android:title="@string/action_add"/>
	<item
		android:id="@+id/action_edit"
		android:icon="@android:drawable/ic_menu_edit"
		android:showAsAction="always|withText"
		android:enabled="false"
		android:title="@string/action_edit"/>
	<item
		android:id="@+id/action_delete"
		android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
		android:showAsAction="always|withText"
		android:enabled="false"
		android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_sort"
        android:showAsAction="never"
        android:title="@string/action_sort"/>
    <item
        android:id="@+id/action_filter"
        android:showAsAction="never"
        android:title="@string/action_filter"/>
    <item
        android:id="@+id/action_delete_all"
        android:showAsAction="never"
        android:title="@string/action_delete_all"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>


</menu>